# ChessBotV2

./: Cargo.toml
src/: gui.rs  main.rs
src/bot/: board_move.rs  magic_bitboards.rs  mod.rs  move_generation.rs  opening.rs  pseudomoves.rs  search.rs  single_moves.rs  utils.rs  zobrist.rs
